--- a/themes/electrive/assets/css/custom.css
+++ b/themes/electrive/assets/css/custom.css
@@ -3712,3 +3712,37 @@ body.active .sidenav {
 section.left-product.wbfepro {
     display: none!important;
 }
+
+.page-my-account #content .links #actdec-link {
+    text-align: center;
+    display: inline-block;
+    font-size: 1rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: #000;
+    padding: 0 .9375rem;
+    margin-bottom: 1.875rem;
+}
+
+.page-my-account #content .links #actdec-link:hover {
+    color: #ffcc00;
+}
+
+.page-my-account #content .links #actdec-link span.link-item {
+    display: block;
+    height: 100%;
+    background-color: #fff;
+    border-radius: 5px;
+    border: 1px solid #f1f1f1;
+    padding: 1rem;
+    font-weight: normal;
+    letter-spacing: 1px;
+}
+
+.page-my-account #content .links #actdec-link i {
+    display: block;
+    font-size: 30px;
+    width: 100%;
+    transition: 0.3s ease;
+    margin-bottom: 12px;
+}
